fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 body {
   font-family: "Inter", sans-serif;
   line-height: 1.6;
-  overflow-x: hidden !important;
   font-size: 14px;
 }
 
